(bugfix) adjust alignment of login and signup titles

--- a/public/style.css
+++ b/public/style.css
@@ -137,6 +137,11 @@ h1, h2 {
   padding-bottom: 0.2em;
 }
 
+h3 {
+  text-align: center;
+  margin-bottom: 0.1em;
+}
+
 a {
   color: #333;
   text-decoration: none;
